Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12766

Analyzer does not display JavaScript data

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.3.0-beta1
    • Qt Creator 3.1.2, Qt Creator 3.2.0-rc1
    • QML Profiler
    • Ubuntu 14.04 LTS 64 bit
    • 8b3b868f4c06376bfd455c9de44a449ba6d4e740

    Description

      1. Open calqlatr demo.
        It's in Examples/Qt-5.3/quick/demos/calqlatr of an installed Qt package. You can use .pro oder .qmlproject files, doesn't matter.
      2. Start the project in QML Profiler.
      3. Use the calculator to generate some events.
      4. Stop the QML profiler.
        JavaScript tab will be empty.

      The Analyzer should show recorded JavaScript data. If this is not possible for a valid reason, this should be documented.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes