src/plugins/qmlprofiler/qmlprofilerviewmanager.cpp
@@ -114,7 +114,7 @@ void QmlProfilerViewManager::createViews()
 
     d->v8profilerView = new QV8ProfilerEventsWidget(mw, d->profilerTool, this,
                                                     d->profilerModelManager);
-    d->v8profilerView->setWindowTitle(tr("JavaScript"));
+    d->v8profilerView->setWindowTitle(tr("V8"));
     connect(d->v8profilerView, SIGNAL(gotoSourceLocation(QString,int,int)), this,
             SIGNAL(gotoSourceLocation(QString,int,int)));
     connect(d->traceView, SIGNAL(gotoSourceLocation(QString,int,int)),
